--- a/styles.css
+++ b/styles.css
@@ -21,15 +21,24 @@ h1#header-title{
     font-size: 30px;
 }
 
+.container-sentence {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+    padding: 50px;
+}
+
+
 #mid-page {
     display: flex;
-    margin-top: 100px;
+    padding: 50px;
     gap: 50px;
+    margin: 0;
     
 }
 
 .score-part {
-    margin-top: 100px;
+    padding: 50px;
     display: flex;
     gap: 300px;
     font-size: 50px;
